center calculator, prevent text from overflowing, add background color

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+* {
+    background-color: rgb(85, 66, 66);
+}
 #calculator {
-    border: solid black;
+    border: solid #000000;
     width: 320px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #display {
@@ -9,6 +14,7 @@
     font-size: 52px;
     line-height: 120px;
     text-align: end;
+    overflow: auto;
 }
 
 #rowZero,
@@ -39,7 +45,8 @@
 }
 
 .number,
-.decimal {
+.decimal,
+#delete {
     background-color: lightgray;
 }
 .equals {
